# qdrant_elastic_benchmarking

./: .gitignore  README.md  config.py  config.yaml  pyproject.toml  runner.py
benchmark_results/: report_2025-11-26T15-52-03.475192.md  report_2025-11-27T11-39-39.648314.md  report_2025-12-01T08-44-39.648263.md  report_2025-12-01T14-44-00.313383.md  report_2025-12-02T14-16-36.249892.md  results_2025-12-01T14-44-00.313383.json  results_2025-12-02T14-16-36.249892.json
benchmarking/: metrics.py
benchmarking/backends/: __init__.py  backends.py  base.py  elastic.py  index_schemas.py  qdrant.py
benchmarking/benchmarks/: query.py  write.py
docs/: CONFIG_GUIDE.md
scripts/: embedding_atlas.sh  generate_embeddings.py  load_elastic.py  load_qdrant.py  migrate_to_qdrant.sh  qdrant.sh
